maybe managed to fix scrolling woes on mobile

--- a/ui/app/sass/layouts.scss
+++ b/ui/app/sass/layouts.scss
@@ -30,7 +30,7 @@
     display: flex;
     //flex-basis: 100%;
     flex-grow: 1;
-    min-height: 500px;
+    //min-height: 500px;
     overflow: hidden;
   }
 
